--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
 			referrerpolicy="no-referrer"></script>
 	</head>
 	<body>
-		<!-- Header Section -->
-		<header></header>
 		<!-- Main Content Section -->
-		<main></main>
-		<!-- Footer Section -->
-		<footer></footer>
+		<main>
+			<div>
+				<ul>
+					lista email
+				</ul>
+			</div>
+		</main>
 		<!-- Custom JavaScript -->
 		<script src="./assets/js/script.js"></script>
 	</body>
